# Autotools-helloworld

./: Makefile  Makefile.in  README.md  config.status  configure  configure.ac  hello  hello.c
autom4te.cache/: output.0  requests  traces.0  traces.1
subdirt_project/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure.scan
subdirt_project/autom4te.cache/: output.0  requests  traces.0  traces.1
subdirt_project/include/: hello.hxx  world.hxx
subdirt_project/lib/: Makefile  Makefile.am  Makefile.in  hello.cxx  world.cxx
subdirt_project/lib/.deps/: libhw_a-hello.Po  libhw_a-world.Po
subdirt_project/src/: Makefile  Makefile.am  Makefile.in  helloworld  main.cxx
subdirt_project/src/.deps/: helloworld-main.Po
