AUTOMAKE_OPTIONS=foreign
lib_LTLIBRARIES=libhw.la
libhw_la_SOURCES=hello.cxx hello.hxx world.cxx world.hxx
libhw_la_CXXFLAGS=-I../include ## add path to headerfiles
#noinst_LIBRARIES=libhw.a ## static library which is not to be installed
#libhw_a_SOURCES=hello.cxx hello.hxx world.cxx world.hxx
#libhw_a_CXXFLAGS=-I../include ## add path to headerfiles
